--- a/package.json
+++ b/package.json
@@ -7,13 +7,19 @@
   "private": true,
   "dependencies": {
     "@sap/cds": "^8",
-    "express": "^4"
+    "express": "^4",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
+    "@cap-js/cds-types": "^0.6",
     "@cap-js/sqlite": "^1",
-    "@cap-js/cds-types": "^0.6"
+    "@sap/ux-specification": "UI5-1.128"
   },
   "scripts": {
-    "start": "cds-serve"
-  }
+    "start": "cds-serve",
+    "watch-studentdetails": "cds watch --open studentdetails/webapp/index.html?sap-ui-xx-viewCache=false"
+  },
+  "sapux": [
+    "app/studentdetails"
+  ]
 }
